--- a/src/components/AuthPage.css
+++ b/src/components/AuthPage.css
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
+    /* background-color: #f5f5f5; */
     position: relative; /* Position relative for overlay */
 }
 
@@ -17,16 +18,22 @@
     margin-bottom: 20px;
 }
 
-.main-content {
-    text-align: center;
-    margin-bottom: 20px;
-}
+
 
 .otp-form {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+.content-container {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    width: 400px;
+    max-width: 100%;
+    text-align: center;
+  }
 
 .otp-input-wrapper {
     display: flex;
