--- a/src/components/IkusasaProgram.css
+++ b/src/components/IkusasaProgram.css
@@ -1,4 +1,4 @@
-.cv-container {
+/*.cv-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -65,3 +65,4 @@
     border-radius: 4px;
     cursor: pointer;
 }
+*/
