--- a/src/components/AdminDash.css
+++ b/src/components/AdminDash.css
@@ -149,7 +149,14 @@
     border-radius: 0;
     border-radius: 8px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-    margin-right: 20px; /* Adjust margin as needed */
+    margin-right: 20px; 
+    
+}
+.parent-container {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+
 }
 .jobsekerWrapper {
     display: flex;
@@ -176,6 +183,50 @@
     border-radius: 8px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
+.profile-completeness {
+    text-align: center;
+  }
+  
+  .circle-progress {
+    position: relative;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: #f2f2f2;
+    margin: 0 auto;
+  }
+  
+  .progress-fill {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    clip: rect(0, 50px, 100px, 0);
+    background: linear-gradient(to right, #8b0000, #2575fc);    transform: rotate(0deg);
+    transition: transform 1s linear;
+  }
+  
+  .progress-fill::after {
+    content: '';
+    position: absolute;
+    width: 6px;
+    height: 6px;
+    background-color: #3498db;
+    border-radius: 50%;
+    top: 47px;
+    left: 47px;
+  }
+  
+  .progress-label {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 20px;
+    font-weight: bold;
+    color: #3498db;
+  }
+  
 .edit-profile-btn {
     background-color: #007bff;
     color: white;
@@ -284,10 +335,7 @@ input[type="file"] {
 
 /* Input, Select, and Textarea Styles */
 .edit-box, 
-.edit-box[type="text"], 
-.edit-box[type="email"], 
-.edit-box[type="date"], 
-.edit-box[type="file"], 
+
 .edit-box select {
     width: 100%;
     padding: 10px;
@@ -315,15 +363,17 @@ input[type="file"] {
     font-size: 0.9rem;
 }
 
-.left-column,
-.right-column {
-    flex: 1; /* Equal width for both columns */
-    margin: 0 10px; /* Adjusted margin */
-}
-.form-row {
-    display: flex;
-}
 
+.row {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+  }
+  
+  .left-column,
+  .right-column {
+    width: 48%;
+  }
 
 .blue-button {
     background-color: #007bff;
