--- a/src/components/LoginA.css
+++ b/src/components/LoginA.css
@@ -12,7 +12,16 @@ body {
     height: 100vh;
   }
  
-  
+  .login-header {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    padding: 20px 0px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+}
   .login-logo {
     position: absolute;
     top: 10px;
@@ -118,11 +127,33 @@ body {
   {
     color: red;
   }
-  @media (max-width: 768px) {
-    .login-container {
-      width: 80%; /* Use percentage for flexible width on smaller screens */
-    }
-  }
+/* LoadingSpinner.css */
+.spinner-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.spinner {
+  border: 8px solid #f3f3f3;
+  border-top: 8px solid #007BFF;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
   
   @media (max-width: 480px) {
     .login-container {
@@ -140,6 +171,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  color: black;
   z-index: 999; /* Ensure modal is on top of other content */
 }
 
@@ -161,12 +193,14 @@ body {
 .otp-modal-content h3 {
   margin-bottom: 10px;
   font-size: 24px;
+  color: black;
 }
 
 /* Modal Text */
 .otp-modal-content p {
   margin-bottom: 20px;
   font-size: 16px;
+  color:black;
 }
 
 /* Modal Button */
