--- a/src/components/OneProfile.css
+++ b/src/components/OneProfile.css
@@ -160,5 +160,46 @@
   
   .dropdown-menu button:hover {
     background-color: #f5f5f5;}
+    .experience-item {
+      display: grid;
+      grid-template-columns: 30fr 1fr;
+      gap: 10px;
+      padding: 16px;
+      margin-bottom: 16px;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      background-color: #f9f9f9;
+      margin-top: 16px;
+
+    }
+    
+    .experience-item:nth-child() {
+      background-color: #f1f1f1;
+    }
+
+    .back-button {
+      display: inline-flex;
+      align-items: center;
+      padding: 10px 20px;
+      background-color: #007bff; 
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 16px;
+      transition: background-color 0.3s ease;
+  }
+  
+  .back-button:hover {
+      background-color: #0056b3; 
+  }
+  
+  .back-button:focus {
+      outline: none;
+  }
+  
+  
+    
+   
     
   
