--- a/src/components/LandingPage.css
+++ b/src/components/LandingPage.css
@@ -44,7 +44,7 @@ nav ul li {
 
 nav ul li a {
     text-decoration: none;
-    color: #333;
+    color: blue;
     font-size: 18px;
     transition: color 0.3s;
 }
