--- a/src/components/LoginA.css
+++ b/src/components/LoginA.css
@@ -279,19 +279,20 @@ body {
   z-index: 1001;
   max-width: 500px;
   width: 90%;
+  color:black
 }
 
 /* Modal Heading */
 .auth-modal h2 {
   margin-top: 0;
   font-size: 24px;
-  color: #333;
+  color:black
 }
 
 /* Modal Text */
 .auth-modal p {
   font-size: 16px;
-  color: #555;
+  color:black;
   margin-bottom: 20px;
 }
 
