--- a/src/components/UserViewPosts.css
+++ b/src/components/UserViewPosts.css
@@ -20,7 +20,7 @@ body {
 }
 
 .nav-link {
-    color: #333;
+    color: #007bff;
     text-decoration: none;
     margin-right: 20px;
     font-weight: bold;
@@ -63,10 +63,18 @@ body {
 }
 
 .filters {
-    display: flex;
-    justify-content: center;
-    padding: 20px;
-    background-color: #e9e9e9;
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+  background-color: #e9e9e9;
+}
+
+@media (max-width: 768px) {
+  .filters {
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+  }
 }
 
 .select {
@@ -128,31 +136,27 @@ body {
 
 }
 .pagination {
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
-    
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
 }
 
-.pagination span {
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    transition: background-color 0.3s ease;
-    margin: 0 5px;
+.pagination button {
+  padding: 10px 20px;
+  margin: 0 10px;
+  background: linear-gradient(45deg, darkred, blue); /* Gradient background */
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
-.pagination span:hover {
-    background-color: #0056b3;
+.pagination button:disabled {
+  background-color: #d6d6d6;
+  cursor: not-allowed;
 }
-.pagination span.active {
-    background-color: #0056b3;
-    color: #fff;
-}
+
 .search-button {
     width: 200px; /* Set a fixed width for the button */
     padding: 12px;
@@ -172,7 +176,7 @@ body {
 /* job application */
 .apply-container {
     max-width: 800px;
-    margin: 20px auto;
+    margin: 150px auto;
     padding: 20px;
     background: #fff;
     border-radius: 5px;
