--- a/src/components/ViewJobDetails.css
+++ b/src/components/ViewJobDetails.css
@@ -11,6 +11,18 @@
     color: #333;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+.spinner-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.8); /* Optional: add a semi-transparent background */
+    z-index: 9999; /* Ensure the spinner is on top of other elements */
+}
 .logos {
     display: flex;
     align-items: center;
@@ -26,6 +38,8 @@
 .job-details-heading {
     text-align: center;
     margin-top: 20px;
+    margin-top: 50px;
+
     font-size: 24px;
     color: #333;
 }
