--- a/src/components/AdminDash.css
+++ b/src/components/AdminDash.css
@@ -722,3 +722,8 @@ input[type="file"] {
     }
 }
 
+.job-icon {
+  width: 500px;  /* Adjust the width as needed */
+  height: auto; /* Maintain aspect ratio */
+  margin: 20px; /* Add some margin if needed */
+}
