--- a/src/components/OneProfile.css
+++ b/src/components/OneProfile.css
@@ -369,6 +369,12 @@
 }
    
     
-   
+.loading-spinner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+}
     
   
