--- a/src/components/OneProfile.css
+++ b/src/components/OneProfile.css
@@ -639,3 +639,51 @@ border-radius: 50%; /* Circular shape */
   padding: 8px 0;
   border-bottom: 1px solid #ccc;
 }
+.notification-detail-container {
+  padding: 20px;
+  max-width: 800px;
+  margin: auto;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  background-color: #f9f9f9;
+}
+
+.notification-header {
+  border-bottom: 1px solid #ddd;
+  padding-bottom: 10px;
+  margin-bottom: 20px;
+}
+
+.notification-title {
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+.notification-message {
+  font-size: 1.2em;
+  margin: 10px 0;
+}
+
+.notification-date {
+  color: #666;
+  font-size: 0.9em;
+}
+
+.loading-message {
+  text-align: center;
+  font-size: 1.2em;
+  color: #999;
+}
+
+.notydelete-button {
+    display: inline-flex;
+    align-items: center;
+    padding: 8px 16px;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    margin-left: 500px;
+    cursor: pointer;
+    color:#8b0000;
+    transition: background-color 0.3s ease;
+}
